data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1637.wast
;; 8. **Incorrect Operand Count Test**:    - **Description**: Define blocks with mismatched operand counts between a `br_if` and the block's required types in a nested structure. This tests if the stack state is validated correctly on branch targets.    - **Constraint Checked**: Operand Stack.    - **Expected Failure**: wizard_engine will likely signal `EmptyValueStackExpecting` if mismatched operand counts are not correctly handled.

(assert_invalid
  (module
    (func $incorrect-operand-count
      (block (result i32)
        (i32.const 42)
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)